[package]
name = "livetraffic"
version = "1.3.0"
authors = ["Sequal32 <connor0530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = "0.16"
byteorder = "1"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
chrono = "0.4"
csv = "1.1"
radix_fmt = "1"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
fsdparser = { git = "https://github.com/Sequal32/vatsimfsdparser" }
