[package]
name = "livetraffic"
version = "1.3.0"
authors = ["Sequal32 <connor0530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = "0.16"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
lazy_static = "1.4"
log = "0.4"
radix_fmt = "1"
retain_mut = "0.1"
regex = "1"
simplelog = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
fsdparser = { git = "https://github.com/Sequal32/vatsimfsdparser" }
