[package]
name = "livetraffic"
description = "Observe real world traffic in your favorite radar client!"
version = "1.4.0"
authors = ["Sequal32"]
edition = "2018"
repository = "https://github.com/sequal/vrclivetraffic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.17", features = ["json"] }
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
lazy_static = "1.4"
log = "0.4"
radix_fmt = "1"
retain_mut = "0.1"
regex = "1"
simplelog = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
fsdparser = { git = "https://github.com/Sequal32/vatsimfsdparser" }
